--- a/index.html
+++ b/index.html
@@ -58,5 +58,6 @@
         <div class="wall-right"></div>
     </div>
     <script src="main.js"></script>
+    <script src="logs.js"></script>
 </body>
 </html>
